--- a/WpfMarathon/Pages/InfoMenu.xaml
+++ b/WpfMarathon/Pages/InfoMenu.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="WpfMarathon.Pages.InfoPage"
+﻿<Page x:Class="WpfMarathon.Pages.InfoMenu"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -6,7 +6,7 @@
       xmlns:local="clr-namespace:WpfMarathon.Pages"
       mc:Ignorable="d" 
       d:DesignHeight="1080" d:DesignWidth="1920"
-      Title="InfoPage">
+      Title="InfoMenu">
 
     <Grid Background="white">
         <!-- Верхняя панель с заголовком -->
@@ -17,7 +17,7 @@
 
             </StackPanel>
             <StackPanel Width="955" Height="570">
-                <Button Content="Marathon Skills 2025" Width="680" Height="170" Margin="40,0,40,0" FontSize="38" HorizontalAlignment="Right" >
+                <Button Name="btn_marathon" Content="Marathon Skills 2025" Width="680" Height="170" Margin="40,0,40,0" FontSize="38" HorizontalAlignment="Right" Click="btn_marathon_Click">
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="15"/>
@@ -25,7 +25,7 @@
                     </Button.Resources>
 
                 </Button>
-                <Button Content="Предыдущие результаты" Width="680" Height="170" Margin="40,30,40,0" FontSize="38"  HorizontalAlignment="Right" >
+                <Button Name="btn_lastresult"  Content="Предыдущие результаты" Width="680" Height="170" Margin="40,30,40,0" FontSize="38"  HorizontalAlignment="Right" Click="btn_lastresult_Click">
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="15"/>
@@ -33,7 +33,7 @@
                     </Button.Resources>
 
                 </Button>
-                <Button Content="BMI калькулятор" Width="680" Height="170" Margin="40,30,40,0" FontSize="38" HorizontalAlignment="Right" >
+                <Button x:Name="btn_bmicalc" Content="BMI калькулятор" Width="680" Height="170" Margin="40,30,40,0" FontSize="38" HorizontalAlignment="Right" Click="btn_listfund_Click">
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="15"/>
@@ -43,7 +43,7 @@
                 </Button>
             </StackPanel>
             <StackPanel Width="955" Height="570">
-                <Button Content="Насколько долгий марафон" Width="680" Height="170" Margin="40,0,40,0" FontSize="38"  HorizontalAlignment="Left" >
+                <Button x:Name="btn_statsmarathon" Content="Насколько долгий марафон" Width="680" Height="170" Margin="40,0,40,0" FontSize="38"  HorizontalAlignment="Left" Click="btn_statsmarathon_Click">
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="15"/>
@@ -51,7 +51,7 @@
                     </Button.Resources>
 
                 </Button>
-                <Button  Width="680" Height="170" Margin="40,30,40,0" FontSize="38"  HorizontalAlignment="Left" >
+                <Button x:Name="btn_listfund"  Width="680" Height="170" Margin="40,30,40,0" FontSize="38"  HorizontalAlignment="Left" Click="btn_listfund_Click">
                     <TextBlock TextAlignment="Center"> Список благотворительных <LineBreak/> организаций</TextBlock>
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
@@ -60,7 +60,7 @@
                     </Button.Resources>
 
                 </Button>
-                <Button Content="BMR калькулятор" Width="680" Height="170" Margin="40,30,40,0" FontSize="38" HorizontalAlignment="Left" >
+                <Button x:Name="btn_bmrcalc" Content="BMR калькулятор" Width="680" Height="170" Margin="40,30,40,0" FontSize="38" HorizontalAlignment="Left" Click="btn_bmrcalc_Click" >
                     <Button.Resources>
                         <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="15"/>
@@ -71,7 +71,7 @@
             </StackPanel>
         </DockPanel>
         <!-- Заголовок формы -->
-        <TextBlock Grid.Row="0" Text="Подробная информация" FontSize="44" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,150,0,856" Foreground="DimGray"/>
+        <TextBlock Grid.Row="0" Text="Подробная информация" FontSize="44" FontWeight="Bold" HorizontalAlignment="Center" Margin="0,182,0,824" Foreground="DimGray"/>
 
     </Grid>
 </Page>
